cobo/010_review/notes.txt
Activity 1 -- Introduction (Reviews and Sentiment value)

1a. Record the method signature in the space below
public static double sentimentVal( String word )
1b. Does this method require a parameter? If so, what type of parameter is required? What happens if you pass a different type of parameter instead?
This method requires a String parameter. When we try to pass a int in as a parameter, there is an error message when we try to compile:
Review.java:167: error: incompatible types: int cannot be converted to String
    sentimentVal(3);
                 ^
1c Does the Method return a value? If so, what is the return type?
It returns a double.

2.
Method Call       Return value
absence           -0.8
christopher       0.35
salmon            -0.1

3. Determine whether or not each statement would compile.
a. double num = sentimentVal("warm");
  yes because the parameter and return values correspond with this declaration.
b. String word = sentimentVal(0.5);
  No because the return value is a double but word is a string and the parameter should be a String but the input is a double.
c. double x = sentimentval("good", "bad");
  No because sentimentVal does not take two parameters


  Activity 2 -- Sentimnet Value and Star Ratings

  4. Explain how the totalSentiment method works
  5a. Do the ratings make sense?
  Yes, they do. The more negative the review, the lower the star rating. 3 would correspond to a neutral star rating that is around 0.
  Anything above 0 would be more positive, which corresponds to higher star ratings of 4-5.

  5b. Describe two ways you can revamp your totalSentiments method
  We can write a method to see the frequency of certain words in the ratings with certain connotations (pos, neg, neu). We could have also
  used the average of all the sentiment values.

  6. Explain the logical errors he made and how he can fix it
  The student assigned his variable the same name as his method. To avoid complications, he should name it something else.

  Activity 3 == Autogenerated Review

  3. Describe the action of indexOf and substring methods and how they can divide arrays into parts
    indexOf can return the first index of the first occurence of the character or word you are searching for, which can be used with substring and
    the idnex of the end of the word such that substring method can identify the location and return the target word.

  5. Describe the difference between calling static and non-static methods.
    Non-static methods can call both static and non-static methods. However, static methods can only call
    other static methods.

  6. Describe how fakeReview can be modified to make a positive or negative review.
    Instead of using randomAdjective, we would specify if we wanted to use randomPositiveAdj or randomNegativeAdj. There could be another parameter,
    such as true or false, so that true can correspond to positive reviews and false can be for negative reviews

    Activity 4 == Create positive or negative reviews

    1. People would want to boost another person's ego! :) 
    2. People would want to generate bad reviews to trash on other people.
    3.
    4.
    5. What does wordOne = wordOne.subString(1) do?
    It returns all the characters following index 1
    6. Why was it neccesary to remove the *?
    The word would not be found in the file since for example, the code would not see "*dog" to be the same as "dog" and no sentiment value would be returned
    7.
